--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ navigationUiKtx = "2.6.0"
 activity = "1.10.0"
 retrofit = "2.9.0"
 okhttp = "4.9.0"
+glide = "4.12.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +32,10 @@ gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrof
 loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version = "2.9.0" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version = "4.9.0" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glideCompiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
